--- a/game.html
+++ b/game.html
@@ -415,9 +415,9 @@
 
     <script>
         // Game data
-        const games = {
+        const games = [
             
-    "title": "Survival Island",
+  { "title": "Survival Island",
     "embed": "https://cloud.onlinegames.io/games/2024/unity2/survival-island/index-og.html",
     "image": "https://www.onlinegames.io/media/posts/970/responsive/Survival-Island-xs.jpg",
     "tags": "1-player,3d,adventure,crafting,free,minecraft,simulator,survival,unity",
@@ -1851,7 +1851,7 @@
     "tags": "1-player,2d,crazy,free,fun,html5,mobile,mouse,simulator",
     "description": "Jackpot Casino is a free slot game where your main aim is to line up the same symbols on the slot machine side by side to claim your prize.  You will see that the machine is adorned with many symbols.  Spin the reels and try to get at least three identical tokens shoulder-to-shoulder.  Hit the jackpot in this exciting kids game!"
   }
-        };
+        ];
 
         // DOM elements
         const gameIframe = document.getElementById('game-iframe');
