--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CJXTLGW9B3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CJXTLGW9B3');
+</script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VGAMES - Retro-Futuristic Gaming Dashboard</title>
@@ -497,8 +508,11 @@
                 font-size: 18px;
             }
         }
+
+        
     </style>
 </head>
+
 <body>
     <header>
         <div class="container header-content">
@@ -784,5 +798,6 @@
             }
         }
     </script>
+
 </body>
 </html>
