--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   gtag('js', new Date());
 
   gtag('config', 'G-CJXTLGW9B3');
-</script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6973513004509305"
+     crossorigin="anonymous"></script>
+
+    </script>
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
