--- a/index.html
+++ b/index.html
@@ -686,12 +686,12 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#" class="shake home-link">Home</a></li>
-                    <li><a href="#" class="shake popular-link">Popular</a></li>
-                    <li><a href="#" class="shake new-releases-link">New Releases</a></li>
-                    <li><a href="#" class="shake categories-link">Categories</a></li>
-                    <li><a href="#" class="shake all-games-link">All Games</a></li>
-                    <li><a href="http://www.vgames.run.place/TVR" class="shake about-link">About</a></li>
+                    <li><a href="http://www.vgames.run.place" class="shake home-link">Home</a></li>
+                    <li><a href="http://www.vgames.run.place/popular" class="shake popular-link">Popular</a></li>
+                    <li><a href="http://www.vgames.run.place/releases" class="shake new-releases-link">New Releases</a></li>
+                    <li><a href="http://www.vgames.run.place/categories" class="shake categories-link">Categories</a></li>
+                    <li><a href="http://www.vgames.run.place/all-games" class="shake all-games-link">All Games</a></li>
+                    <li><a href="http://www.vgames.run.place/about" class="shake about-link">About</a></li>
                 </ul>
             </nav>
         </div>
