--- a/popular.html
+++ b/popular.html
@@ -323,7 +323,372 @@
             border-bottom: 2px solid var(--secondary);
             display: inline-block;
         }
+     footer {
+            background-color: var(--darker);
+            padding: 30px 0;
+            text-align: center;
+            border-top: 2px solid var(--primary);
+        }
 
+        .footer-content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .footer-logo {
+            font-family: 'Press Start 2P', cursive;
+            font-size: 20px;
+            color: var(--primary);
+            margin-bottom: 15px;
+        }
+
+        .copyright {
+            font-size: 14px;
+            color: rgba(245, 246, 250, 0.7);
+            margin-bottom: 15px;
+        }
+
+        .footer-links {
+            display: flex;
+            gap: 20px;
+            margin-bottom: 20px;
+        }
+
+        .footer-links a {
+            color: var(--text);
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        .footer-links a:hover {
+            color: var(--accent);
+        }
+
+        .social-icons {
+            display: flex;
+            gap: 15px;
+        }
+
+        .social-icon {
+            color: var(--text);
+            font-size: 20px;
+            transition: all 0.3s ease;
+        }
+
+        .social-icon:hover {
+            color: var(--accent);
+            transform: translateY(-3px);
+        }
+
+        .game-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: var(--darker);
+            z-index: 1000;
+            display: none;
+            flex-direction: column;
+        }
+
+        .game-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px;
+            background-color: var(--dark);
+            border-bottom: 2px solid var(--primary);
+        }
+
+        .game-title-bar {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .game-title-bar img {
+            height: 30px;
+        }
+
+        .game-controls {
+            display: flex;
+            gap: 10px;
+        }
+
+        .game-control-btn {
+            background-color: var(--primary);
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: all 0.2s;
+        }
+
+        .game-control-btn:hover {
+            background-color: var(--accent);
+        }
+
+        .game-frame {
+            flex: 1;
+            border: none;
+            background-color: black;
+        }
+
+        .loading-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(30, 30, 47, 0.9);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 0.3s ease;
+        }
+
+        .loading-overlay.active {
+            opacity: 1;
+            pointer-events: all;
+        }
+
+        .loading-spinner {
+            width: 50px;
+            height: 50px;
+            border: 5px solid rgba(108, 92, 231, 0.2);
+            border-top-color: var(--primary);
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+            margin-bottom: 20px;
+        }
+
+        .loading-message {
+            font-family: 'Press Start 2P', cursive;
+            font-size: 16px;
+            color: var(--secondary);
+            text-align: center;
+        }
+
+        @keyframes spin {
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+        @keyframes shake {
+            0%, 100% { transform: translateX(0); }
+            10%, 30%, 50%, 70%, 90% { transform: translateX(-5px); }
+            20%, 40%, 60%, 80% { transform: translateX(5px); }
+        }
+
+        .shake {
+            animation: shake 0.5s ease;
+        }
+
+        /* Preview styles */
+        .preview-container {
+            position: fixed;
+            z-index: 999;
+            background-color: var(--dark);
+            border: 2px solid var(--primary);
+            border-radius: 8px;
+            padding: 15px;
+            max-width: 400px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+            display: none;
+        }
+
+        .preview-title {
+            font-weight: bold;
+            margin-bottom: 10px;
+            color: var(--accent);
+        }
+
+        .preview-description {
+            font-size: 14px;
+            margin-bottom: 10px;
+        }
+
+        .preview-link {
+            color: var(--secondary);
+            word-break: break-all;
+        }
+
+        /* All Games section */
+        .all-games-container {
+            display: none;
+            margin-bottom: 40px;
+        }
+
+        .all-games-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            gap: 20px;
+        }
+
+        .all-games-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
+        .back-to-home {
+            background-color: var(--primary);
+            color: white;
+            border: none;
+            padding: 8px 15px;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: all 0.3s;
+        }
+
+        .back-to-home:hover {
+            background-color: var(--accent);
+        }
+
+        /* Custom alert */
+        .custom-alert {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: var(--dark);
+            border: 2px solid var(--primary);
+            border-radius: 8px;
+            padding: 20px;
+            z-index: 9999;
+            max-width: 400px;
+            width: 90%;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+            display: none;
+        }
+
+        .custom-alert-content {
+            margin-bottom: 20px;
+        }
+
+        .custom-alert-title {
+            font-family: 'Press Start 2P', cursive;
+            font-size: 18px;
+            color: var(--accent);
+            margin-bottom: 15px;
+        }
+
+        .custom-alert-message {
+            margin-bottom: 20px;
+        }
+
+        .custom-alert-buttons {
+            display: flex;
+            justify-content: flex-end;
+            gap: 10px;
+        }
+
+        .custom-alert-btn {
+            padding: 8px 15px;
+            border-radius: 4px;
+            cursor: pointer;
+            border: none;
+            font-weight: bold;
+        }
+
+        .custom-alert-confirm {
+            background-color: var(--primary);
+            color: white;
+        }
+
+        .custom-alert-cancel {
+            background-color: var(--dark);
+            color: var(--text);
+            border: 1px solid var(--text);
+        }
+
+        /* Notification permission */
+        .notification-permission {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: var(--dark);
+            border: 2px solid var(--primary);
+            border-radius: 8px;
+            padding: 15px;
+            max-width: 350px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+            z-index: 999;
+            display: none;
+        }
+
+        .notification-permission p {
+            margin-bottom: 15px;
+        }
+
+        .notification-buttons {
+            display: flex;
+            gap: 10px;
+        }
+
+        .notification-btn {
+            padding: 8px 15px;
+            border-radius: 4px;
+            cursor: pointer;
+            border: none;
+            font-weight: bold;
+        }
+
+        .notification-allow {
+            background-color: var(--primary);
+            color: white;
+        }
+
+        .notification-deny {
+            background-color: var(--dark);
+            color: var(--text);
+            border: 1px solid var(--text);
+        }
+
+        @media (max-width: 768px) {
+            .header-content {
+                flex-direction: column;
+            }
+
+            nav ul {
+                margin-top: 20px;
+            }
+
+            nav ul li {
+                margin: 0 10px;
+            }
+
+            .hero h2 {
+                font-size: 24px;
+            }
+
+            .game-grid {
+                grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            }
+        }
+
+        @media (max-width: 480px) {
+            .game-grid {
+                grid-template-columns: 1fr;
+            }
+
+            .logo h1 {
+                font-size: 18px;
+            }
+            
+            .all-games-grid {
+                grid-template-columns: 1fr;
+            }
+        }
         /* Include all other styles from your index.html */
         /* ... (footer styles, game container styles, etc.) ... */
 
@@ -338,12 +703,12 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html" class="shake home-link">Home</a></li>
-                    <li><a href="popular.html" class="shake popular-link">Popular</a></li>
-                    <li><a href="#" class="shake new-releases-link">New Releases</a></li>
-                    <li><a href="categories.html" class="shake categories-link">Categories</a></li>
-                    <li><a href="#" class="shake all-games-link">All Games</a></li>
-                    <li><a href="http://www.vgames.run.place/TVR" class="shake about-link">About</a></li>
+                    <li><a href="http://www.vgames.run.place" class="shake home-link">Home</a></li>
+                    <li><a href="http://www.vgames.run.place/popular" class="shake popular-link">Popular</a></li>
+                    <li><a href="http://www.vgames.run.place/releases" class="shake new-releases-link">New Releases</a></li>
+                    <li><a href="http://www.vgames.run.place/categories" class="shake categories-link">Categories</a></li>
+                    <li><a href="http://www.vgames.run.place/all-games" class="shake all-games-link">All Games</a></li>
+                    <li><a href="http://www.vgames.run.place/about" class="shake about-link">About</a></li>
                 </ul>
             </nav>
         </div>
