--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
             setupNotificationListeners();
             
             // Load games
-            fetch('https://www.vgames.run.place/game.json')
+            fetch('https://www.onlinegames.io/media/plugins/genGames/embed.json')
                 .then(response => response.json())
                 .then(data => {
                     allGames = data;
