--- a/popular.html
+++ b/popular.html
@@ -777,7 +777,7 @@
             document.getElementById('loadingOverlay').classList.add('active');
             
             // Load games data
-            fetch('http://www.vgames.run.place/game.json')
+            fetch('https://www.onlinegames.io/media/plugins/genGames/embed.json')
                 .then(response => response.json())
                 .then(data => {
                     // Hide loading overlay
