--- a/index.html
+++ b/index.html
@@ -687,10 +687,7 @@
             <nav>
                 <ul>
                     <li><a href="https://www.vgames.run.place" class="shake home-link">Home</a></li>
-                    <li><a href="https://www.vgames.run.place/popular" class="shake popular-link">Popular</a></li>
-                    <li><a href="https://www.vgames.run.place/releases" class="shake new-releases-link">New Releases</a></li>
-                    <li><a href="https://www.vgames.run.place/categories" class="shake categories-link">Categories</a></li>
-                    <li><a href="https://www.vgames.run.place/all-games" class="shake all-games-link">All Games</a></li>
+                    <li><a href="https://thundafund.africa/campaign/0A94C65131967170B684" class="shake popular-link">Donate</a></li>
                     <li><a href="https://www.vgames.run.place/about" class="shake about-link">About</a></li>
                 </ul>
             </nav>
