--- a/index.html
+++ b/index.html
@@ -686,7 +686,8 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="https://www.vgames.run.place" class="shake home-link">Home</a></li>
+                    <li><a href="https://www.vgames.run.place" class="shake home-link">Refresh</a></li>
+                     <li><a href="https://www.vgames.run.place/movie" class="shake home-link">Movies</a></li>
                     <li><a href="https://thundafund.africa/campaign/0A94C65131967170B684" class="shake popular-link">Donate</a></li>
                     <li><a href="https://www.vgames.run.place/about" class="shake about-link">About</a></li>
                 </ul>
