--- a/index.html
+++ b/index.html
@@ -688,6 +688,8 @@
                 <ul>
                     <li><a href="https://www.vgames.run.place" class="shake home-link">Refresh</a></li>
                      <li><a href="https://www.vgames.run.place/movie" class="shake home-link">Movies</a></li>
+                     <li><a href="https://www.vgames.run.place/jobs.html" class="shake home-link">JOBS</a></li>
+                     <li><a href="jobs.html" class="shake home-link">Volunteer</a></li>
                     <li><a href="https://thundafund.africa/campaign/0A94C65131967170B684" class="shake popular-link">Donate</a></li>
                     <li><a href="https://www.vgames.run.place/about" class="shake about-link">About</a></li>
                 </ul>
