--- a/jobs.html
+++ b/jobs.html
@@ -224,7 +224,7 @@
                 <form action="https://formsubmit.co/vuyaniphila86@gmail.com" method="POST" id="jobApplicationForm">
                     <input type="hidden" name="_subject" value="New Job Application from VGAMES Website">
                     <input type="hidden" name="_template" value="table">
-                    <input type="hidden" name="_next" value="https://yourwebsite.com/thank-you.html">
+                    <input type="hidden" name="_next" value="https://vgames.run.place/tu.html">
                     <input type="hidden" name="_captcha" value="false">
                     
                     <div class="form-group">
