--- a/index.html
+++ b/index.html
@@ -470,6 +470,11 @@
     </style>
 </head>
 <body>
+   <!-- LED Clock -->
+    <div class="led-clock" id="ledClock">
+        <span id="time">00:00:00</span>
+        <span id="date">2025-01-01</span>
+    </div>
 
 
     <!-- Intro Animation -->
